# wasm-memprof

./: .gitignore  .npmignore  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  test.yml
bindgen/: Cargo.toml  README.md  patch.mjs
bindgen/src/: lib.rs
docs/: release-workflow.md
examples/: main.c
instrumentor/: Cargo.toml  README.md
instrumentor/src/: call_graph.rs  lib.rs  replace.rs
src/: profile.pb.d.ts  profile.pb.js  wasm-memprof.ts
src/plugins/: swift-demangler.ts
src/plugins/swift-demangler/: Package.swift  README.md
src/plugins/swift-demangler/Sources/: Demangler.swift
test/: smoke.html  smoke.test.js
test/cases/: basic.pprof.json  basic.wasm
