[package]
name = "instrumentor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "instrumentor"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.93"
log = "0.4.22"
walrus = { git = "https://github.com/rustwasm/walrus.git", rev = "refs/pull/285/head" }

[dev-dependencies]
wasmi = "0.40.0"
wat = "1.221.0"
